# prueba_12_gradesmem

./: Cargo.toml
src/: index.html  main (copia).rs  main.rs
static/: script.js
