[package]
name = "prueba_12_gradesmem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = "0.18.0"
serde_json = "1.0.111"
log = "0.4.20"
env_logger = "0.10.1"
rocket = "0.5.0-rc.1"
anyhow = "1.0.77"
crossterm = "0.27.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }